cc_library(
    name = "application",
    srcs = [
        "Game.cpp",
        "GameConfig.cpp",
        "GameMenu.cpp",
        "GameOver.cpp",
        "GameTraceHandler.cpp",
        "GameWindowHandler.cpp",
    ],
    hdrs = [
        "Game.h",
        "GameConfig.h",
        "GameMenu.h",
        "GameOver.h",
        "GameTraceHandler.h",
        "GameWindowHandler.h",
    ],
    deps = [
        "//src/Engine:engine",
        "//src/Engine/Components/Control:engine_components_control",
        "//src/Engine/Components/Trace:engine_components_trace",
        "//src/Engine/Graphics:engine_graphics",
        "//src/Engine/Graphics/Renderer:engine_graphics_renderer",
        "//src/Application/GameStates:application_game_states",
        "//src/Application/Startup:application_startup",
        "//src/GUI:gui",
        "//src/Io:io",
        "//src/Library/Config:library_config",
        "//src/Library/Fsm:library_fsm",
        "//src/Library/Lod:library_lod",
        "//src/Media:media",
        "//src/Library/Platform/Application:library_platform_application",
        "//src/Library/Platform/Interface:library_platform_interface",
        "//src/Scripting:scripting",
        "//src/Utility:utility",
        "@imgui//:imgui",
    ],
    visibility = ["//visibility:public"],
)
