cc_library(
    name = "engine",
    srcs = [
        "AssetsManager.cpp",
        "AttackList.cpp",
        "Conditions.cpp",
        "Engine.cpp",
        "EngineGlobals.cpp",
        "EngineIocContainer.cpp",
        "GpuHints.cpp",
        "Localization.cpp",
        "MapEnums.cpp",
        "MapInfo.cpp",
        "OurMath.cpp",
        "Party.cpp",
        "PartyEnums.cpp",
        "PriceCalculator.cpp",
        "SaveLoad.cpp",
        "SpellFxRenderer.cpp",
        "TeleportPoint.cpp",
        "mm7_data.cpp",
        "mm7text_ru.cpp",
        "Seasons.cpp",
    ],
    hdrs = [
        "ArenaEnumFunctions.h",
        "ArenaEnums.h",
        "AssetsManager.h",
        "AttackList.h",
        "Conditions.h",
        "Engine.h",
        "EngineCallObserver.h",
        "EngineGlobals.h",
        "EngineIocContainer.h",
        "Localization.h",
        "MapEnums.h",
        "MapInfo.h",
        "OurMath.h",
        "Party.h",
        "PartyEnums.h",
        "Pid.h",
        "PriceCalculator.h",
        "SaveLoad.h",
        "SpellFxRenderer.h",
        "TeleportPoint.h",
        "mm7_data.h",
        "stru314.h",
        "Seasons.h",
    ],
    # NOTE: local_defines below reference CMake variables that must be resolved at build time.
    # These are placeholder values; update via a genrule or stamping mechanism.
    local_defines = [
        'PROJECT_VERSION=\\"0.0.0\\"',
        'OE_BUILD_COMPILER=\\"unknown\\"',
        'OE_BUILD_PLATFORM=\\"unknown\\"',
        'OE_BUILD_ARCHITECTURE=\\"unknown\\"',
    ],
    deps = [
        "//src/Engine/Data:engine_data",
        "//src/Engine/Graphics:engine_graphics",
        "//src/Engine/Graphics/Renderer:engine_graphics_renderer",
        "//src/Engine/Objects:engine_objects",
        "//src/Engine/Snapshots:engine_snapshots",
        "//src/Engine/Spells:engine_spells",
        "//src/Engine/Tables:engine_tables",
        "//src/Engine/TurnEngine:engine_turn_engine",
        "//src/Engine/Evt:engine_evt",
        "//src/Engine/Random:engine_random",
        "//src/Engine/Time:engine_time",
        "//src/Engine/Resources:engine_resources",
        "//src/Library/Compression:library_compression",
        "//src/Library/Logger:library_logger",
        "//src/Library/Serialization:library_serialization",
        "//src/Library/Color:library_color",
        "//src/Library/LodFormats:library_lod_formats",
        "//src/Library/BuildInfo:library_build_info",
        "//src/Library/FileSystem/Embedded:library_filesystem_embedded",
        "//src/Library/FileSystem/Merging:library_filesystem_merging",
        "//src/Library/FileSystem/Masking:library_filesystem_masking",
        "//src/Library/FileSystem/Directory:library_filesystem_directory",
        "//src/Library/FileSystem/Lowercase:library_filesystem_lowercase",
        "//src/Library/FileSystem/Proxy:library_filesystem_proxy",
        # resources target — TODO: depends on cmrc genrule (//resources:resources)
        "//src/Utility:utility",
    ],
    visibility = ["//visibility:public"],
)
