cc_library(
    name = "engine_base",
    hdrs = [
        "ArenaEnums.h",
        "LocalizationEnums.h",
        "MapEnumFunctions.h",
        "MapEnums.h",
        "PartyEnums.h",
        "Pid.h",
    ],
    deps = [
        "//src/Library/Serialization:library_serialization",
        "//src/Utility:utility",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "engine_hitmap",
    hdrs = [
        "HitMap.h",
    ],
    deps = [
        "//src/Engine/Graphics:engine_graphics",
        "//src/Library/Geometry:library_geometry",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "engine",
    srcs = [
        "AssetsManager.cpp",
        "AttackList.cpp",
        "Conditions.cpp",
        # Engine.cpp needs GUI/UI headers — compiled in engine_impl
        "EngineGlobals.cpp",
        "EngineIocContainer.cpp",
        "GpuHints.cpp",
        "Localization.cpp",
        "MapEnums.cpp",
        "MapInfo.cpp",
        "OurMath.cpp",
        # Party.cpp needs GUI/UI headers — compiled in engine_impl
        "PartyEnums.cpp",
        "PriceCalculator.cpp",
        # SaveLoad.cpp needs GUI/UI headers — compiled in engine_impl
        "SpellFxRenderer.cpp",
        "TeleportPoint.cpp",
        "mm7_data.cpp",
        "mm7text_ru.cpp",
        "Seasons.cpp",
        # Srcs from sub-packages that need engine headers (avoids engine <-> sub-package cycle):
        "//src/Engine/Objects:Decoration.cpp",
        "//src/Engine/Objects:DecorationList.cpp",
        "//src/Engine/Objects:ItemEnumFunctions.cpp",
        "//src/Engine/Objects:ObjectList.cpp",
        "//src/Engine/Objects:TalkAnimation.cpp",
        "//src/Engine/Snapshots:CompositeSnapshots.cpp",
        "//src/Engine/Snapshots:EntitySnapshots.cpp",
        "//src/Engine/Tables:IconFrameTable.cpp",
        "//src/Engine/Tables:TextureFrameTable.cpp",
        "//src/Engine/Time:Timer.cpp",
        "//src/Engine/Graphics/Renderer:RendererFactory.cpp",
        # Spells.cpp/TurnEngine.cpp need Media/Audio/AudioPlayer.h — compiled in engine_impl
        "//src/Engine/Tables:NPCTable.cpp",
    ],
    hdrs = [
        "ArenaEnumFunctions.h",
        "AssetsManager.h",
        "AttackList.h",
        "Conditions.h",
        "Engine.h",
        "EngineCallObserver.h",
        "EngineGlobals.h",
        "EngineIocContainer.h",
        "Localization.h",
        "MapInfo.h",
        "OurMath.h",
        "Party.h",
        "PriceCalculator.h",
        "SaveLoad.h",
        "SpawnPoint.h",
        "SpellFxRenderer.h",
        "TeleportPoint.h",
        "mm7_data.h",
        "stru314.h",
        "Seasons.h",
    ],
    # NOTE: local_defines below reference CMake variables that must be resolved at build time.
    # These are placeholder values; update via a genrule or stamping mechanism.
    local_defines = [
        'PROJECT_VERSION=\\"0.0.0\\"',
        'OE_BUILD_COMPILER=\\"unknown\\"',
        'OE_BUILD_PLATFORM=\\"unknown\\"',
        'OE_BUILD_ARCHITECTURE=\\"unknown\\"',
    ],
    deps = [
        ":engine_base",
        ":engine_hitmap",
        "//src/Application:application_config",
        "//src/GUI:gui_dialogues",
        "//src/GUI:gui_font",
        "//src/Io:io_mouse",
        "//src/Media/Audio:media_audio_sound_info",
        "//src/Engine/Data:engine_data",
        "//src/Engine/Graphics:engine_graphics",
        "//src/Engine/Graphics/Renderer:engine_graphics_renderer",
        "//src/Engine/Objects:engine_objects",
        "//src/Engine/Snapshots:engine_snapshots",
        "//src/Engine/Spells:engine_spells",
        "//src/Engine/Tables:engine_tables",
        "//src/Engine/TurnEngine:engine_turn_engine",
        "//src/Engine/Evt:engine_evt",
        "//src/Engine/Random:engine_random",
        "//src/Engine/Time:engine_time",
        "//src/Engine/Resources:engine_resources",
        "//src/Library/Compression:library_compression",
        "//src/Library/Logger:library_logger",
        "//src/Library/Platform/Application:library_platform_application",
        "//src/Library/Serialization:library_serialization",
        "//src/Library/Color:library_color",
        "//src/Library/LodFormats:library_lod_formats",
        "//src/Library/BuildInfo:library_build_info",
        "//src/Library/FileSystem/Embedded:library_filesystem_embedded",
        "//src/Library/FileSystem/Merging:library_filesystem_merging",
        "//src/Library/FileSystem/Masking:library_filesystem_masking",
        "//src/Library/FileSystem/Directory:library_filesystem_directory",
        "//src/Library/FileSystem/Lowercase:library_filesystem_lowercase",
        "//src/Library/FileSystem/Proxy:library_filesystem_proxy",
        "//resources:resources",
        "//src/Utility:utility",
    ],
    visibility = ["//visibility:public"],
)

# Files that need both engine headers AND gui/media/renderer headers. Compiled separately to
# avoid circular dependencies. Must be added as a dep wherever the binary is built.
cc_library(
    name = "engine_impl",
    srcs = [
        # engine_graphics .cpp files (need engine + renderer headers — circular with engine_graphics)
        "//src/Engine/Graphics:BSPModel.cpp",
        "//src/Engine/Graphics:BspRenderer.cpp",
        "//src/Engine/Graphics:Camera.cpp",
        "//src/Engine/Graphics:ClippingFunctions.cpp",
        "//src/Engine/Graphics:Collisions.cpp",
        "//src/Engine/Graphics:DecalBuilder.cpp",
        "//src/Engine/Graphics:FrameLimiter.cpp",
        "//src/Engine/Graphics:Image.cpp",
        "//src/Engine/Graphics:ImageLoader.cpp",
        "//src/Engine/Graphics:Indoor.cpp",
        "//src/Engine/Graphics:LightmapBuilder.cpp",
        "//src/Engine/Graphics:LightsStack.cpp",
        "//src/Engine/Graphics:LocationFunctions.cpp",
        "//src/Engine/Graphics:Outdoor.cpp",
        "//src/Engine/Graphics:OutdoorTerrain.cpp",
        "//src/Engine/Graphics:Overlays.cpp",
        "//src/Engine/Graphics:PaletteManager.cpp",
        "//src/Engine/Graphics:ParticleEngine.cpp",
        "//src/Engine/Graphics:PortalFunctions.cpp",
        "//src/Engine/Graphics:Sprites.cpp",
        "//src/Engine/Graphics:TileGenerator.cpp",
        "//src/Engine/Graphics:TurnBasedOverlay.cpp",
        "//src/Engine/Graphics:Viewport.cpp",
        "//src/Engine/Graphics:Vis.cpp",
        "//src/Engine/Graphics:Weather.cpp",
        # engine_objects .cpp files (need engine + gui/media headers — circular with engine_objects)
        "//src/Engine/Objects:Actor.cpp",
        "//src/Engine/Objects:Character.cpp",
        "//src/Engine/Objects:Chest.cpp",
        "//src/Engine/Objects:Item.cpp",
        "//src/Engine/Objects:Monsters.cpp",
        "//src/Engine/Objects:NPC.cpp",
        "//src/Engine/Objects:SpriteObject.cpp",
        "//src/Engine/Spells:CastSpellInfo.cpp",
        "//src/Engine/Tables:ItemTable.cpp",
        # engine_evt .cpp files (need Engine/Engine.h — circular with engine_evt)
        "//src/Engine/Evt:EvtInstruction.cpp",
        "//src/Engine/Evt:EvtProgram.cpp",
        "//src/Engine/Evt:EvtInterpreter.cpp",
        "//src/Engine/Evt:Processor.cpp",
        # engine_graphics_renderer .cpp files (need Engine/Engine.h)
        "//src/Engine/Graphics/Renderer:BaseRenderer.cpp",
        "//src/Engine/Graphics/Renderer:NullRenderer.cpp",
        "//src/Engine/Graphics/Renderer:OpenGLRenderer.cpp",
        # engine_resources .cpp files (need ../AssetsManager.h — circular with engine_resources)
        "//src/Engine/Resources:LOD.cpp",
        "//src/Engine/Resources:LodSpriteCache.cpp",
        "//src/Engine/Resources:LodTextureCache.cpp",
        "//src/Engine/Resources:ResourceManager.cpp",
        # engine_snapshots .cpp files (need Media/Audio/SoundList.h — circular with media_audio -> engine)
        "//src/Engine/Snapshots:TableSerialization.cpp",
        # engine sub-package .cpp files (need media/gui headers — circular with those deps on engine)
        "//src/Engine/Spells:Spells.cpp",
        "//src/Engine/TurnEngine:TurnEngine.cpp",
        # engine .cpp files (need GUI/UI headers — circular with gui -> gui_ui -> io -> engine)
        "Engine.cpp",
        "Party.cpp",
        "SaveLoad.cpp",
        # io .cpp files (need GUI headers — circular with gui -> gui_ui -> io)
        "//src/Io:KeyboardInputHandler.cpp",
        "//src/Io:Mouse.cpp",
        # media_audio .cpp files (need GUI headers — circular with gui -> gui_ui -> media_audio)
        "//src/Media/Audio:AudioPlayer.cpp",
    ],
    local_defines = [
        'PROJECT_VERSION=\\"0.0.0\\"',
        'OE_BUILD_COMPILER=\\"unknown\\"',
        'OE_BUILD_PLATFORM=\\"unknown\\"',
        'OE_BUILD_ARCHITECTURE=\\"unknown\\"',
    ],
    deps = [
        ":engine",
        "//src/Engine/Graphics/Renderer:engine_graphics_renderer",
        "//src/Engine/Evt:engine_evt",
        "//src/GUI:gui",
        "//src/GUI/Overlay:gui_overlay_hdrs",
        "//src/GUI/UI:gui_ui",
        "//src/Io:io",
        "//src/Media/Audio:media_audio",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)
