cc_library(
    name = "gui",
    srcs = [
        "GUIButton.cpp",
        "GUIEnums.cpp",
        "GUIFont.cpp",
        "GUIProgressBar.cpp",
        "GUIMessageQueue.cpp",
        "GUIWindow.cpp",
    ],
    hdrs = [
        "GUIButton.h",
        "GUIDialogues.h",
        "GUIEnums.h",
        "GUIFont.h",
        "GUIProgressBar.h",
        "GUIMessageQueue.h",
        "GUIWindow.h",
    ],
    deps = [
        "//src/Engine:engine",
        "//src/Engine/Data:engine_data",
        "//src/Engine/Graphics:engine_graphics",
        "//src/Engine/Objects:engine_objects",
        "//src/Engine/Time:engine_time",
        "//src/GUI/UI:gui_ui",
        "//src/Library/Geometry:library_geometry",
        "//src/Library/LodFormats:library_lod_formats",
        "//src/Utility:utility",
    ],
    visibility = ["//visibility:public"],
)
